fix: prevent page shift when scrollbar appears

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@
 body {
   font-family: "Jost", sans-serif;
   background-color: var(--clr-grey-200);
+  overflow-y: scroll;
 }
 
 /* Box sizing rules */
